# clinicsentry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  NOTICE  README.md  RESPONSIBLE_USE.md  SECURITY.md  STATUS.md  THREAT_MODEL.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
deploy/compose/: docker-compose.yml  otel-collector.yaml  prometheus.yml
deploy/grafana/dashboards/: clinicsentry.json
deploy/grafana/provisioning/dashboards/: clinicsentry.yaml
deploy/helm/clinicsentry/: Chart.yaml  values.yaml
deploy/helm/clinicsentry/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  service.yaml
deploy/terraform/aws/: main.tf
deploy/terraform/azure/: main.tf
deploy/terraform/gcp/: main.tf
docs/: adapters.md  api.md  index.md  policy.md  quickstart.md  regulatory-mapping.md  responsible-use.md
docs/adr/: 0000-template.md  0001-module-boundaries.md  0002-adapter-abc-contract.md  0003-audit-chain-semantics.md  0004-propagation-graph-schema.md  0005-key-management.md  0006-iec62304-class-enforcement.md  0007-compliance-rule-language.md  0008-exception-taxonomy.md  0009-async-sync-boundary.md  0010-test-conventions.md  0011-di-patterns.md  0012-configuration-loading.md  0013-observability-hooks.md  0014-threat-model-scope.md  0015-redaction-mode-selection.md  0016-adversarial-normalization-scan-path.md  README.md
docs/concepts/: audit-trail.md  escalation-router.md  meddevice-mode.md  phi-firewall.md
docs/tutorials/: a2a.md  adk.md  claude.md  crewai.md  langgraph.md  mcp.md  openai-agents.md  production.md
examples/: clinical_summarizer.py  policy.yaml
src/clinicsentry/: __init__.py  cli.py  errors.py  guard.py  performance.py  policy.py  types.py
src/clinicsentry/adapters/: __init__.py  a2a.py  base.py  claude_sdk.py  crewai.py  google_adk.py  langgraph.py  mcp_proxy.py  openai_agents.py
src/clinicsentry/audit/: __init__.py  backend.py  chain.py  otel.py  pdf_report.py  postgres.py  report.py  s3.py
src/clinicsentry/audit/migrations/: __init__.py  alembic.ini  env.py  runner.py  script.py.mako
src/clinicsentry/audit/migrations/versions/: 0001_initial_audit_events.py
src/clinicsentry/compliance/: __init__.py  engine.py
src/clinicsentry/compliance/rules/: eu_ai_act.yaml  fda_tplc.yaml  hipaa.yaml  iec62304.yaml
src/clinicsentry/dashboard/: __init__.py  app.py
src/clinicsentry/escalation/: __init__.py  channels.py  confidence.py  extra_signals.py  router.py  temperature_scaling.py
src/clinicsentry/meddevice/: __init__.py  cia.py  clinician_auth.py  cloud_kms.py  http_kms.py  iec62304_v2.py  keys.py  mode.py
src/clinicsentry/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/clinicsentry/phi/: __init__.py  adversarial.py  detectors.py  firewall.py  medical_ner.py  minimum_necessary.py  multilingual.py  ocr.py  parsers.py  pipeline.py  propagation.py  redaction.py
tests/: _docker_guard.py  test_adapters.py  test_adversarial_robustness.py  test_alembic_migrations.py  test_audit.py  test_audit_backends.py  test_audit_chain_mutation.py  test_cli_summary.py  test_cloud_kms_aws.py  test_cloud_kms_mocked.py  test_compliance.py  test_confidence_mutation.py  test_escalation.py  test_escalation_extra.py  test_guard_integration.py  test_http_kms.py  test_layering.py  test_meddevice.py  test_meddevice_extra.py  test_meddevice_mutation.py  test_pdf_report.py  test_performance.py  test_phi_firewall.py  test_phi_heavy_deps.py  test_phi_pipeline.py  test_policy_validation.py  test_postgres_integration.py  test_propagation.py  test_softhsm_integration.py  test_synthetic_phi.py  test_temperature_scaling.py  test_untrusted_input.py
tests/adapters/: __init__.py  test_claude_sdk_integration.py  test_crewai_integration.py  test_google_adk_integration.py  test_langgraph_integration.py  test_mcp_proxy_integration.py  test_openai_agents_integration.py
tests/fixtures/synthetic_phi/: __init__.py  corpus.json  generator.py
